--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-localization": "~15.0.3"
+    "expo-localization": "~15.0.3",
+    "react-native-pager-view": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
