--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "bootstrap": "^5.3.3",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
@@ -30,6 +31,7 @@
     "json-server": "^1.0.0-beta.1",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
